# soma_pkg

./: .gitignore  README.md
minisoma/: README.md
soma_atv_driver/: CMakeLists.txt  README.md  package.xml
soma_base/: CMakeLists.txt  README.md  package.xml
soma_bringup/: .rosinstall  CMakeLists.txt  README.md  package.xml
soma_description/: CMakeLists.txt  README.md  package.xml
soma_experiments/: CMakeLists.txt  README.md  package.xml
soma_gazebo/: CMakeLists.txt  package.xml
soma_global_planner/: CMakeLists.txt  README.md  global_planner_plugin.xml  package.xml
soma_localization/: CMakeLists.txt  README.md  package.xml
soma_mapping/: CMakeLists.txt  README.md  package.xml
soma_mapping/data/: tree_locations.txt
soma_mapping/launch/: edit_3dmap.launch  hdl_graph_slam.launch  make_tree_map.launch  map_range_clip.launch
soma_mapping/rviz/: hdl_graph_slam.rviz
soma_mapping/scripts/: make_tree_locations.py  tree_coordinates.py
soma_mapping/src/: pointcloud_projection.cpp
soma_mse/: CMakeLists.txt  README.md
soma_msgs/: CMakeLists.txt  README.md  package.xml
soma_navigation/: CMakeLists.txt  package.xml
soma_online_slam/: CMakeLists.txt  README.md  package.xml
soma_perception/: CMakeLists.txt  README.md  nodelet_description.xml  package.xml  predict.py  train.py
soma_planner/: CMakeLists.txt  package.xml
soma_rpi/: Makefile
soma_samples/: CMakeLists.txt  README.md  package.xml
soma_sensor/: CMakeLists.txt  README.md
soma_tools/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
soma_viz/: CMakeLists.txt  README.md  (+1 more)
(+491 files in other folders)
